apps/shared/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    topolvm.io/webhook: ignore
    internal-services: "true"
