apps/shared/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
  labels:
    homelab.wahoo.li/exposure: public
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "grafana.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
